fix image caption

--- a/_includes/cc_album.html
+++ b/_includes/cc_album.html
@@ -129,7 +129,7 @@ img {vertical-align: middle;}
   <div class="mySlides fade">
     <!-- <div class="numbertext">4 / 34</div> -->
     <img src="/_lfs/images/cc_album/cc_album_04.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <!-- <div class="text">Caption Three</div> -->
   </div>
 
   <div class="mySlides fade">
