--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 1500px;
-    padding-top: 630px;
+    height: 3800px; /* kept the height from the second set */
+    padding-top: 500px; /* kept the padding-top from the second set */
 }
 
 .iframe-container iframe {
@@ -16,4 +16,5 @@
     right: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
