--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,20 @@
     grid-template-columns: 50% 50%;
     padding: 10px;
 }
+
+/* calendar */
+.calendar-container {
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+
+.calendar-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
